--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @font-face {
-    font-family: 'CirrusCumulus';
-    src: url('./fonts/CirrusCumulus.woff') format('woff');
+    font-family: 'FuturaStd-Book';
+    src: url('./fonts/FuturaStd-Book.otf') format('otf');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Sligoil-Micro';
-    src: url('./fonts/Sligoil-Micro.woff') format('woff');
+    font-family: 'FuturaStd-Medium';
+    src: url('./fonts/FuturaStd-Medium.otf') format('otf');
     font-weight: normal;
     font-style: normal;
 }
